@@ -145,14 +145,13 @@ function get_tickets_replys(&$tpl, &$sql, &$ticket_id, $screenwidth) {
 		$ticket_id = $rs->fields['ticket_id'];
 		$ticket_subject = $rs->fields['ticket_subject'];
 		$ticket_date = clean_html($rs->fields['ticket_date']);
-		$ticket_message = clean_html(nl2br($rs->fields['ticket_message']));
+		$ticket_message = wordwrap(html_entity_decode($rs->fields['ticket_message']), round(($screenwidth-200) / 7), "\n");
 
 		$date_formt = Config::get('DATE_FORMAT');
 		$tpl->assign(
 			array(
 				'DATE' => date($date_formt, $rs->fields['ticket_date']),
-				'TICKET_CONTENT' => wordwrap(html_entity_decode(nl2br($rs->fields['ticket_message'])), round(($screenwidth-200) / 7), "<br>\n", 1),
-				// 'ID' => $rs -> fields['ticket_reply'],
+				'TICKET_CONTENT' => nl2br($ticket_message)
 				)
 			);
 		get_ticket_from($tpl, $sql, $ticket_id);
