@@ -123,12 +123,15 @@ function get_tickets_replys(&$tpl, &$sql, &$ticket_id, $screenwidth) {
 		$ticket_subject = $rs->fields['ticket_subject'];
 		$ticket_date = $rs->fields['ticket_date'];
 		$ticket_message = clean_input($rs->fields['ticket_message']);
+		$ticket_content = wordwrap(html_entity_decode($rs->fields['ticket_message']), round(($screenwidth-200) / 7), "\n");
 
 		$date_formt = Config::get('DATE_FORMAT');
-		$tpl->assign(array('DATE' => date($date_formt, $rs->fields['ticket_date']),
-				'TICKET_CONTENT' => wordwrap(html_entity_decode(nl2br($rs->fields['ticket_message'])), round(($screenwidth-200) / 7), "<br>\n", 1),
-				// 'ID' => $rs -> fields['ticket_reply'],
-				));
+		$tpl->assign(
+			array(
+				'DATE' => date($date_formt, $rs->fields['ticket_date']),
+				'TICKET_CONTENT' => nl2br($ticket_content)
+			)
+		);
 		get_ticket_from($tpl, $sql, $ticket_id);
 		$tpl->parse('TICKETS_ITEM', '.tickets_item');
 		$rs->MoveNext();
