@@ -63,23 +63,23 @@ function action_delete(url, mailacc) {
                   <td valign="top"><table width="100%" cellspacing="7">
                     <!-- BDP: page_message -->
                 <tr>
-                  <td colspan="4" nowrap="nowrap" class="title"><span class="message">{MESSAGE}</span></td>
+                  <td colspan="5" nowrap="nowrap" class="title"><span class="message">{MESSAGE}</span></td>
                 </tr>
                 <tr>
                     <!-- EDP: page_message -->
                    <td nowrap="nowrap" class="content3"><b>{TR_MAIL}</b></td>
                    <td nowrap="nowrap" class="content3" width="150"><b>{TR_TYPE}</b></td>
                    <td nowrap="nowrap" class="content3" align="center" width="180"><b>{TR_STATUS}</b></td>
-                   <td nowrap="nowrap" class="content3" align="center" width="100"><b>{TR_ACTION}</b></td>
+                   <td nowrap="nowrap" class="content3" align="center" width="100" colspan="5"><b>{TR_ACTION}</b></td>
                 </tr>
                     <!-- BDP: mail_message -->
                 <tr>
-                   <td colspan="4" class="title"><span class="message">{MAIL_MSG}</span></td>
+                   <td colspan="5" class="title"><span class="message">{MAIL_MSG}</span></td>
                 </tr>
                     <!-- EDP: mail_message -->
                     <!-- BDP: mail_item -->
                 <tr>
-                   <td nowrap="nowrap" class="{ITEM_CLASS}"><img src="{THEME_COLOR_PATH}/images/icons/mail_icon.png" width="16" height="14" align="absmiddle"> <a href="{MAIL_EDIT_SCRIPT}" class="link">{MAIL_ACC}</a>
+                   <td nowrap="nowrap" class="{ITEM_CLASS}"><img src="{THEME_COLOR_PATH}/images/icons/mail_icon.png" width="16" height="14" align="absmiddle">&nbsp;{MAIL_ACC}
                           <!-- BDP: auto_respond --><div style="display: {AUTO_RESPOND_VIS};">
 						  <br><span class="style1">
 						  {TR_AUTORESPOND}: [&nbsp;&nbsp;
@@ -91,12 +91,13 @@ function action_delete(url, mailacc) {
                       </td>
                    <td nowrap="nowrap" class="{ITEM_CLASS}" width="150">{MAIL_TYPE}</td>
                    <td nowrap="nowrap" class="{ITEM_CLASS}" align="center" width="180">{MAIL_STATUS}</td>
-                   <td nowrap="nowrap" class="{ITEM_CLASS}" align="center" width="100"><img src="{THEME_COLOR_PATH}/images/icons/delete.png" width="16" height="16" border="0" align="absmiddle"> <a href="#" class="link" onclick="action_delete('{MAIL_ACTION_SCRIPT}', '{MAIL_ACC}')">{MAIL_ACTION}</a></td>
+                   <td nowrap="nowrap" class="{ITEM_CLASS}" align="center" width="100"><img src="{THEME_COLOR_PATH}/images/icons/delete.png" width="16" height="16" border="0" align="absmiddle"> <a href="#" class="link" onclick="action_delete('{MAIL_DELETE_SCRIPT}', '{MAIL_ACC}')">{MAIL_DELETE}</a></td>
+                   <td nowrap="nowrap" class="{ITEM_CLASS}" align="center" width="100"><img src="{THEME_COLOR_PATH}/images/icons/edit.png" width="16" height="16" border="0" align="absmiddle"> <a href="{MAIL_EDIT_SCRIPT}" class="link">{MAIL_EDIT}</a></td>
                     </tr>
                     <!-- EDP: mail_item -->
                     <!-- BDP: mails_total -->
                     <tr>
-                      <td colspan="4" align="right" nowrap="nowrap" class="content3">{TR_TOTAL_MAIL_ACCOUNTS}:&nbsp;<b>{TOTAL_MAIL_ACCOUNTS}</b>/{ALLOWED_MAIL_ACCOUNTS}</td>
+                      <td colspan="5" align="right" nowrap="nowrap" class="content3">{TR_TOTAL_MAIL_ACCOUNTS}:&nbsp;<b>{TOTAL_MAIL_ACCOUNTS}</b>/{ALLOWED_MAIL_ACCOUNTS}</td>
                     </tr>
                     <!-- EDP: mails_total -->
                   </table></td>
