@@ -1,11 +1,19 @@
 ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
-2008-08-26 Daniel Andreca
+
+008-09-15 Daniel Andreca
 	- GUI:
-		* encript email password in database
-		* encript sql password in database
+		* Fixed #1396: Wordwrap in ticket system (admin / client)
+		* Fixed #1506: Email edit link inconsistent with other pages
+	- ENGINE:
+		* Fixed #1534: Setup script fails if the same username is always used
+
+2008-09-14 Daniel Andreca
+	- GUI:
+		* Encrypt email password in database
+		* Encrypt sql password in database
 		* Fixed #1535: Wrong error text in user Email creation
-		* Fixed #1396: Wordwrap in ticket system
+		* Fixed #1396: Wordwrap in ticket system (resseler)
 		* Fixed #1533 Hardcoded FTP sepparator
 
 2008-09-10 Daniel Andreca
